--- a/views/add/addHotDog.handlebars
+++ b/views/add/addHotDog.handlebars
@@ -48,7 +48,7 @@
                             <button class="btn btn-outline-info">Editar Hot-Dog</button>
                         </a>
                     </div>
-                    <form action="/hotdog/add" method="post">
+                    <form action="/hotdog/cadastrar" method="post">
                         <div class="card-body">
                             <form id="form" data-parsley-validate="" novalidate="">
                                 <div class="form-group">
