--- a/views/vis-prod/vis-hotdog.handlebars
+++ b/views/vis-prod/vis-hotdog.handlebars
@@ -40,48 +40,56 @@
                     <div class="card">
                         <h5 class="card-header">Hot-Dog Cadastrados</h5>
                         <div class=" card-header">
-                        <a href="/hotdog/add"><button class="btn btn-outline-success">Cadastrar Hot-Dog</button></a>
-                        <a href="/hotdog/edit"><button class="btn btn-outline-info">Editar Hot-Dog</button></a>
+                            <a href="/hotdog/add"><button class="btn btn-outline-success">Cadastrar Hot-Dog</button></a>
                         </div>
-                             
-                        <div class="card-body">
-                            <table class="table">
-                                <thead>
-                                    <tr>
-                                        <th scope="col-2">Id</th>
-                                        <th scope="col">nome</th>
-                                        <th scope="col">Valor Gasto</th>
-                                        <th scope="col">valor Venda</th>
-                                        <th scope="col">Lucro</th>
-                                        <th scope="col">descrição</th>                                        
-                                        <th>
-                                            <a href=""> Apagar</a>
-                                        </th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    {{#each hotdog}}
-                                    <form action="/hotdog/delete" method="post">
-                                        <tr>
-                                            <input type="hidden" value="{{dataValues.id}}" name="id">
-                                            <th scope="row">{{dataValues.id}}</th>
-                                            <td>{{dataValues.nome}}</td>
-                                            <td>{{dataValues.valorGasto}}</td>
-                                            <td>{{dataValues.valorVendido}}</td>
-                                            <td>{{dataValues.lucro}}</td>
-                                            <td>{{dataValues.desc}}</td>                                            
-                                            <td>
-                                                <Button class="btn btn-outline-danger">Deletar</Button>
-                                            </td>
-                                    </form>
-                                        </tr>
 
-                                    {{/each}}
-                                </tbody>
-                            </table>
+                        <div class="card-body">
+                            {{#each hotdog}}
+                            <form action="/hotdog/edit" method="post">
+                                <div class="row">
+                                    <div class="group col-12">
+                                        <p><strong>Nome: </strong>{{dataValues.nome}}</p>
+                                    </div>
+                                    <div class="group col-12">
+                                        <p><strong>Descrição: </strong> {{dataValues.desc}}</p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="group col-12">
+                                        <p><strong>Valor: </strong>R$ {{dataValues.valorVendido}}
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="group col-12">
+                                        <p><strong>Valor Gasto: </strong>R$ {{dataValues.valorGasto}}
+                                        </p>
+                                    </div>
+                                    <div class="group col-12">
+                                        <p><strong>Lucro: </strong>{{lucro}}
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <a class="col-12 mt-2">
+                                        <button class="btn btn-outline-info col-12">Editar</button>
+                                    </a>
+                                </div>
+                            </form>
+                            <form action="/hotdog/delete" method="post">
+                                <div class="row mt-2">
+                                    <a class="col-12 mt-2">
+                                        <button class="btn btn-outline-danger col-12">Deletar</button>
+                                    </a>
+                                </div>
+                            </form>
+
                         </div>
+                        <hr>
+                        {{/each}}
                     </div>
                 </div>
-                <!-- ============================================================== -->
-                <!-- end basic table -->
-                <!-- ============================================================== -->
+            </div>
+            <!-- ============================================================== -->
+            <!-- end basic table -->
+            <!-- ============================================================== -->
